<resources>
    <string name="app_name">To Do List</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Dont have account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="login_to_continue">Login to continue!</string>
    <string name="welcome_to_to_do_list">Welcome to \nTo Do List</string>
    <string name="create_new_account">Create New Account!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="explaning_text">Enter your email address and will send \nyour instructions on how to reset it</string>
    <string name="hello_adnan">Hello, Adnan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="may_17_sat">May 17, Sat</string>
    <string name="daily_plan">Daily Plan</string>
    <string name="create_a_plan">Create a Plan</string>
    <string name="plan_title">Plan Title</string>
    <string name="write_your_plan_here">Write your plan here</string>
    <string name="_10_30_am">10:30 am</string>
    <string name="delete_text">Delete Text</string>
    <string name="complete_plan">Complete Plan</string>
    <string name="my_duties">My Duties</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="beginner">Beginner</string>
    <string name="_0_points">0 Points</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="home">Home</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_host">HostActivity</string>
    <string name="sep_19_2020">Sep/19/2020</string>
    <string name="category">Category</string>
    <string name="sports">Sports</string>
    <string name="work">Work</string>
    <string name="shopping">Shopping</string>
    <string name="hobbies">Hobbies</string>
    <string name="daily_tasks">Daily</string>

</resources>