<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dutiesFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/my_duties" />
        <item
            android:id="@+id/weeklyPlanFragment"
            android:icon="@drawable/ic_view_week"
            android:title="@string/weekly_plan" />

        <item
            android:id="@+id/dailyPlanFragment"
            android:icon="@drawable/ic_today"
            android:title="@string/daily_plan" />

        <item
            android:id="@+id/createPlanFragment"
            android:icon="@drawable/ic_create_new"
            android:title="@string/create_a_plan" />

    </group>
</menu>